--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/stylesheet.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -22,31 +23,31 @@
       <div class="container">
     </div>
     <div class="header">
-      <div class="container">
+      <div class="container"></div>
     </div>
     <div class="about">
-      <div class="container">
+      <div class="container"></div>
     </div>
     <div class="about-1">
-      <div class="container">
+      <div class="container"></div>
     </div>
     <div class="about-2">
-      <div class="container">
+      <div class="container"></div>
     </div>
     <div class="skills">
-      <div class="container">
+      <div class="container"></div>
     </div>
     <div class="instructors">
-      <div class="container">
+      <div class="container"></div>
     </div>
     <div class="student-work">
-      <div class="container">
+      <div class="container"></div>
     </div>
     <div class="after-storyboard">
-      <div class="container">
+      <div class="container"></div>
     </div>
     <div class="landed">
-      <div class="container">
+      <div class="container"></div>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
