hero image and text CHECK

--- a/index.html
+++ b/index.html
@@ -22,8 +22,15 @@
     <div class="navbar">
       <div class="container">
     </div>
+    </div>
     <div class="header">
-      <div class="container"></div>
+        <div class="hero-image">
+          <div class="hero-text">
+            <h1>STORYBOARD</h1>
+            <h1 id="title-offset">STORYBOARD</h1>
+            <h3>HackCville's Digital Media Program</h3>
+          </div>
+        </div>
     </div>
     <div class="about">
       <div class="container"></div>
