--- a/index.html
+++ b/index.html
@@ -19,9 +19,28 @@
     <![endif]-->
   </head>
   <body>
-    <div class="navbar">
-      <div class="container">
-    </div>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainNavBar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <!--LOGO-->
+          <a class="navbar-brand" href="#">
+            <img class="hackCvilleLogo" alt="Brand" src="images2/hackCvilleLogo.png">
+          </a>
+        </div>
+        <div class="collapse navbar-collapse" id="mainNavBar">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Curriculum</a></li>
+            <li><a href="#">Outcomes</a></li>
+            <li><a href="#"><button type="button" class="btn btn-primary applyButton">Apply</button></a></li>
+          </ul> 
+        </div>
+    </nav>
     <div class="header">
       <div class="container"></div>
     </div>
