--- a/index.html
+++ b/index.html
@@ -19,12 +19,6 @@
     <![endif]-->
   </head>
   <body>
-<<<<<<< HEAD
-    <div class="navbar">
-      <div class="container">
-    </div>
-    </div>
-=======
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -47,12 +41,10 @@
           </ul> 
         </div>
     </nav>
->>>>>>> master
     <div class="header">
         <div class="hero-image">
           <div class="hero-text">
-            <h1>STORYBOARD</h1>
-            <h1 id="title-offset">STORYBOARD</h1>
+            <h1 id="hero-title">STORYBOARD</h1>
             <h3>HackCville's Digital Media Program</h3>
           </div>
         </div>
