--- a/index.html
+++ b/index.html
@@ -59,7 +59,18 @@
       <div class="container"></div>
     </div>
     <div class="skills">
-      <div class="container"></div>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-4">.col-md-4</div>
+          <div class="col-md-4">.col-md-4</div>
+          <div class="col-md-4">.col-md-4</div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">.col-md-4</div>
+          <div class="col-md-4">.col-md-4</div>
+          <div class="col-md-4">.col-md-4</div>
+        </div>
+      </div>
     </div>
     <div class="instructors">
       <div class="container"></div>
