added about title and sub-title

--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
         </div>
     </div>
     <div class="about">
-      <div class="container"></div>
+      <div class="container-fluid">
+        <div class="about_subtitle">
+          <h3>A CLASS FOR THE</h3>
+          <h2>DIGITAL STORYTELLER</h2>
+        </div>
+      </div>
     </div>
     <div class="about-1">
       <div class="container"></div>
