--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </nav>
     <div class="header">
-        <div class="hero-image">
+        <div class="hero-image" alt="happy image of hackcvillians learning!!">
           <div class="hero-text">
             <h1 id="hero-title">STORYBOARD</h1>
             <h3>HackCville's Digital Media Program</h3>
@@ -60,15 +60,35 @@
     </div>
     <div class="skills">
       <div class="container-fluid">
+        <h2 id="skills-title">WHAT YOU'LL LEARN</h2>
         <div class="row">
-          <div class="col-md-4">.col-md-4</div>
-          <div class="col-md-4">.col-md-4</div>
-          <div class="col-md-4">.col-md-4</div>
+          <div class="col-md-4">
+            <div class="skills-title video"><p>Videography</p></div>
+            <div class="offset-title"></div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="skills-title photo"><p>Photography</p></div>
+            <div class="offset-title"></div>
+          </div>
+          <div class="col-md-4">
+            <div class="skills-title edit"><p>Editing Software</p></div>
+            <div class="offset-title"></div>
+          </div>
         </div>
         <div class="row">
-          <div class="col-md-4">.col-md-4</div>
-          <div class="col-md-4">.col-md-4</div>
-          <div class="col-md-4">.col-md-4</div>
+          <div class="col-md-4">
+            <div class="skills-title audio"><p>Audio</p></div>
+            <div class="offset-title"></div>
+          </div>
+          <div class="col-md-4">
+            <div class="skills-title writing"><p>Creative Writing</p></div>
+            <div class="offset-title"></div>
+          </div>
+          <div class="col-md-4">
+            <div class="skills-title interview"><p>How To Interview</p></div>
+            <div class="offset-title"></div>
+          </div>
         </div>
       </div>
     </div>
