added images and text layout in about page

--- a/index.html
+++ b/index.html
@@ -56,6 +56,30 @@
           <h2>DIGITAL STORYTELLER</h2>
         </div>
       </div>
+      <div class="container-fluid aboutHolder">
+        <div class="container-fluid">
+          <div class="container image imageOneSpecific">
+          </div>
+          <div class="container aboutText firstTextSpecific">
+            <h4>Develop skills and apply them through hands-on experience</h4>
+            <p>Storyboard is a 12-week program that teaches video production and digital storytelling. 
+              Students learn skills in interviewing, filming, and editing and publish their work to HackCville’s publication, The Pioneer. 
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid">
+        <div class="container-fluid aboutHolder aboutHolderTwo">
+            <div class="container aboutText secondTextSpecific">
+              <h4>See it in action</h4>
+              <p>Storyboard is a 12-week program that teaches video production and digital storytelling. 
+                Students learn skills in interviewing, filming, and editing and publish their work to HackCville’s publication, The Pioneer. 
+              </p>
+            </div>
+            <div class="container image imageTwoSpecific">
+            </div>
+        </div>
+      </div>
     </div>
     <div class="about-1">
       <div class="container"></div>
