Added offset teal and black rectangle

--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
       <div class="container-fluid aboutHolder">
         <div class="container-fluid">
           <div class="container image imageOneSpecific">
+              <div class="quoteSet">
+                <h5>"I love the new people HackCville exposed me to: people who are driven, creative, ambitious, and inspirational. 
+                  I also loved the skills, both hard and soft, I got to learn and practice."</h5><br>
+                <h6> - Becky Ross, HackCville Member, Storyboard Program Graduate</h6>
+              </div>
+              <div class="tealOffSet">
+              </div>
           </div>
           <div class="container aboutText firstTextSpecific">
             <h4>Develop skills and apply them through hands-on experience</h4>
