--- a/index.html
+++ b/index.html
@@ -75,7 +75,19 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid">
+      <div class="container-fluid phoneSecondImage">
+        <div class="container-fluid aboutHolder aboutHolderTwo">
+            </div>
+              <div class="container image imageTwoSpecific">
+            </div>
+          <div class="container aboutText secondTextSpecific">
+              <h4>See it in action</h4>
+              <p>Storyboard is a 12-week program that teaches video production and digital storytelling. 
+                Students learn skills in interviewing, filming, and editing and publish their work to HackCville’s publication, The Pioneer. 
+              </p>
+          </div>
+      </div>
+      <div class="container-fluid hideWhenMobile">
         <div class="container-fluid aboutHolder aboutHolderTwo">
             <div class="container aboutText secondTextSpecific">
               <h4>See it in action</h4>
