--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
         <div class="container-fluid aboutHolder aboutHolderTwo">
             <div class="container aboutText secondTextSpecific">
               <h4>See it in action</h4>
-              <p>Storyboard is a 12-week program that teaches video production and digital storytelling. 
-                Students learn skills in interviewing, filming, and editing and publish their work to HackCville’s publication, The Pioneer. 
+              <p>Watch your work come alive in the Adobe Creative Suite and tackle concepts such as binaural audio and animations. A cumulative final project will combine
+                and make use of all of the topics learned in Storyboard.
               </p>
             </div>
             <div class="container image imageTwoSpecific">
