--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li><a href="#">About</a></li>
             <li><a href="#">Curriculum</a></li>
             <li><a href="#">Outcomes</a></li>
-            <li><a href="#"><button type="button" class="btn btn-primary applyButton">Apply</button></a></li>
+            <li><a href="#"><button type="button" class="btn btn-primary applyButton cmn-t-pulse">Apply</button></a></li>
           </ul> 
         </div>
     </nav>
