--- a/index.html
+++ b/index.html
@@ -63,31 +63,29 @@
         <h2 id="skills-title">WHAT YOU'LL LEARN</h2>
         <div class="row">
           <div class="col-md-4">
-            <div class="skills-title video"><p>Videography</p></div>
-            <div class="offset-title"></div>
+            <div class="skills-icon video"></div>
+            <div class="overlay">
+              <div class="text">videography</div>
+            </div>
           </div>
 
           <div class="col-md-4">
-            <div class="skills-title photo"><p>Photography</p></div>
-            <div class="offset-title"></div>
+            <div class="skills-icon photo"><p></p></div>
           </div>
           <div class="col-md-4">
-            <div class="skills-title edit"><p>Editing Software</p></div>
-            <div class="offset-title"></div>
+            <div class="skills-icon edit"><p></p></div>
           </div>
         </div>
+
         <div class="row">
           <div class="col-md-4">
-            <div class="skills-title audio"><p>Audio</p></div>
-            <div class="offset-title"></div>
+            <div class="skills-icon audio"><p></p></div>
           </div>
           <div class="col-md-4">
-            <div class="skills-title writing"><p>Creative Writing</p></div>
-            <div class="offset-title"></div>
+            <div class="skills-icon writing"><p></p></div>
           </div>
           <div class="col-md-4">
-            <div class="skills-title interview"><p>How To Interview</p></div>
-            <div class="offset-title"></div>
+            <div class="skills-icon interview"><p></p></div>
           </div>
         </div>
       </div>
