--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@
         <h2 id="skills-title">WHAT YOU'LL LEARN</h2>
         <div class="row">
           <div class="col-md-4">
-            <div class="skills-icon video"></div>
-            <div class="overlay">
-              <div class="text">videography</div>
+            <div class="skills-icon video">
+              <!--<img src="images/video.png" alt="videography">-->
+              <div class="overlay">
+                <div class="text">videography</div>
+              </div>
             </div>
           </div>
 
