--- a/index.html
+++ b/index.html
@@ -110,7 +110,18 @@
       <div class="container"></div>
     </div>
     <div class="instructors">
-      <div class="container"></div>
+      <div class="container">
+        <h2>YOUR INSTRUCTORS</h2>
+        <div class="container image CC">
+            <div class="ccName">
+              <h2>CC Cura</h2>
+            </div>
+            <div class="ccTeal">
+            </div>
+        </div>
+
+
+      </div>
     </div>
     <div class="student-work">
       <div class="container"></div>
