hover effect on skills

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           </ul> 
         </div>
     </nav>
+
     <div class="header">
         <div class="hero-image" alt="happy image of hackcvillians learning!!">
           <div class="hero-text">
@@ -49,6 +50,7 @@
           </div>
         </div>
     </div>
+
     <div class="about">
       <div class="container"></div>
     </div>
@@ -58,37 +60,68 @@
     <div class="about-2">
       <div class="container"></div>
     </div>
+
     <div class="skills">
       <div class="container-fluid">
+      <div class="skills-container">
         <h2 id="skills-title">WHAT YOU'LL LEARN</h2>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="skills-icon video">
-              <!--<img src="../images/video.png" alt="videography">-->
-            
-            <div class="overlay">
-              <div class="text">videography</div>
+        
+
+          <div class="row">
+
+            <div class="col-md-4">
+              <div class="hover-container">
+                <div class="skills-icon video"></div>
+                <div class="overlay">
+                  <div class="text">videography</div>
+                </div>
+              </div>
             </div>
+
+            <div class="col-md-4">
+              <div class="hover-container">
+                <div class="skills-icon photo"></div>
+                <div class="overlay">
+                  <div class="text">photography</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="hover-container">
+                <div class="skills-icon edit"></div>
+                <div class="overlay">
+                  <div class="text">editing<br>software</div>
+                </div>
+              </div>
             </div>
           </div>
 
-          <div class="col-md-4">
-            <div class="skills-icon photo"><p></p></div>
-          </div>
-          <div class="col-md-4">
-            <div class="skills-icon edit"><p></p></div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-4">
-            <div class="skills-icon audio"><p></p></div>
-          </div>
-          <div class="col-md-4">
-            <div class="skills-icon writing"><p></p></div>
-          </div>
-          <div class="col-md-4">
-            <div class="skills-icon interview"><p></p></div>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="hover-container">
+                <div class="skills-icon audio"></div>
+                <div class="overlay">
+                  <div class="text">audio</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="hover-container">
+                <div class="skills-icon writing"></div>
+                <div class="overlay">
+                  <div class="text">creative<br>writing</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="hover-container">
+                <div class="skills-icon interview"></div>
+                <div class="overlay">
+                  <div class="text">how to<br>interview</div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
