added text to instructors section, working on title responsiveness

--- a/index.html
+++ b/index.html
@@ -110,17 +110,24 @@
       <div class="container"></div>
     </div>
     <div class="instructors">
-      <div class="container">
-        <h2>YOUR INSTRUCTORS</h2>
-        <div class="container image CC">
+      <div class="container-fluid">
+        <div class="container-fluid instructorsMainTitle">
+          <h2>YOUR</h2>
+          <h2>INSTRUCTORS</h2>
+        </div>
+        <div class="container-fluid image CC">
             <div class="ccName">
               <h2>CC Cura</h2>
             </div>
             <div class="ccTeal">
             </div>
         </div>
-
-
+        <div class="CCtext">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Ut interdum arcu at tellus efficitur pellentesque. 
+                Nulla accumsan metus odio, ut porta arcu lacinia vitae. 
+            </p>
+        </div>
       </div>
     </div>
     <div class="student-work">
