--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             <li><a href="#">About</a></li>
             <li><a href="#">Curriculum</a></li>
             <li><a href="#">Outcomes</a></li>
-            <li><a href="#"><button type="button" class="btn btn-primary applyButton">Apply</button></a></li>
+            <li><a href="#"><button type="button" class="btn btn-primary applyButton cmn-t-pulse">Apply</button></a></li>
           </ul> 
         </div>
     </nav>
     <div class="header">
-        <div class="hero-image" alt="happy image of hackcvillians learning!!">
+        <div class="hero-image">
           <div class="hero-text">
             <h1 id="hero-title">STORYBOARD</h1>
             <h3>HackCville's Digital Media Program</h3>
@@ -50,7 +50,55 @@
         </div>
     </div>
     <div class="about">
-      <div class="container"></div>
+      <div class="container-fluid">
+        <div class="about_subtitle">
+          <h3>A CLASS FOR THE</h3>
+          <h2>DIGITAL STORYTELLER</h2>
+        </div>
+      </div>
+      <div class="container-fluid aboutHolder">
+        <div class="container-fluid">
+          <div class="container image imageOneSpecific">
+              <div class="quoteSet">
+                <h5>"I love the new people HackCville exposed me to: people who are driven, creative, ambitious, and inspirational. 
+                  I also loved the skills, both hard and soft, I got to learn and practice."</h5><br>
+                <h6> - Becky Ross, HackCville Member, Storyboard Program Graduate</h6>
+              </div>
+              <div class="tealOffSet">
+              </div>
+          </div>
+          <div class="container aboutText firstTextSpecific">
+            <h4>Develop skills and apply them through hands-on experience</h4>
+            <p>Storyboard is a 12-week program that teaches video production and digital storytelling. 
+              Students learn skills in interviewing, filming, and editing and publish their work to HackCville’s publication, The Pioneer. 
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid phoneSecondImage">
+        <div class="container-fluid aboutHolder aboutHolderTwo">
+            </div>
+              <div class="container image imageTwoSpecific">
+            </div>
+          <div class="container aboutText secondTextSpecific">
+              <h4>See it in action</h4>
+              <p>Storyboard is a 12-week program that teaches video production and digital storytelling. 
+                Students learn skills in interviewing, filming, and editing and publish their work to HackCville’s publication, The Pioneer. 
+              </p>
+          </div>
+      </div>
+      <div class="container-fluid hideWhenMobile">
+        <div class="container-fluid aboutHolder aboutHolderTwo">
+            <div class="container aboutText secondTextSpecific">
+              <h4>See it in action</h4>
+              <p>Watch your work come alive in the Adobe Creative Suite and tackle concepts such as binaural audio and animations. A cumulative final project will combine
+                and make use of all of the topics learned in Storyboard.
+              </p>
+            </div>
+            <div class="container image imageTwoSpecific">
+            </div>
+        </div>
+      </div>
     </div>
     <div class="about-1">
       <div class="container"></div>
@@ -59,39 +107,7 @@
       <div class="container"></div>
     </div>
     <div class="skills">
-      <div class="container-fluid">
-        <h2 id="skills-title">WHAT YOU'LL LEARN</h2>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="skills-icon video">
-              <!--<img src="../images/video.png" alt="videography">-->
-            
-            <div class="overlay">
-              <div class="text">videography</div>
-            </div>
-            </div>
-          </div>
-
-          <div class="col-md-4">
-            <div class="skills-icon photo"><p></p></div>
-          </div>
-          <div class="col-md-4">
-            <div class="skills-icon edit"><p></p></div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-4">
-            <div class="skills-icon audio"><p></p></div>
-          </div>
-          <div class="col-md-4">
-            <div class="skills-icon writing"><p></p></div>
-          </div>
-          <div class="col-md-4">
-            <div class="skills-icon interview"><p></p></div>
-          </div>
-        </div>
-      </div>
+      <div class="container"></div>
     </div>
     <div class="instructors">
       <div class="container"></div>
