updated index w changes in weird sitch

--- a/index.html
+++ b/index.html
@@ -129,7 +129,9 @@
       <div class="container"></div>
     </div>
     <div class="student-work">
-      <div class="container"></div>
+      <div class="container">
+        
+      </div>
     </div>
     <div class="after-storyboard">
       <div class="container"></div>
