remove exclamation points

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="header">
         <div class="hero-image">
           <div class="hero-text">
-            <h1 id="hero-title">STORYBOARD!!!</h1>
+            <h1 id="hero-title">STORYBOARD</h1>
             <h3>HackCville's Digital Media Program</h3>
           </div>
         </div>
