resized image to be smaller, stretched CC description text out more and increased font, added link to her work, but not yet responsive

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </div>
       <div class="container-fluid phoneSecondImage">
         <div class="container-fluid aboutHolder aboutHolderTwo">
-            </div>
+        </div>
               <div class="container image imageTwoSpecific">
             </div>
           <div class="container aboutText secondTextSpecific">
@@ -109,27 +109,24 @@
     <div class="skills">
       <div class="container"></div>
     </div>
+
     <div class="instructors">
-      <div class="container-fluid">
-        <div class="container-fluid instructorsMainTitle">
-          <h2>YOUR</h2>
-          <h2>INSTRUCTORS</h2>
+      <div class="instructors_about">
+        <h2>YOUR INSTRUCTOR</h2>
+      </div>
+      <div class="container-fluid ccPhotoTextHolder">
+        <div class="container ccimage CCspecific">
         </div>
-        <div class="container-fluid image CC">
-            <div class="ccName">
-              <h2>CC Cura</h2>
-            </div>
-            <div class="ccTeal">
-            </div>
+        <div class="container CCtext">
+          <h5>Catherine "CC" Cura is the first woman Director of The Pioneer, an online publication run out of HackCville on The Corner.
+             She is a third-year at the University of Virginia studying Media Studies and Politics.
+          </h5>
+          <a href="#" class="CCworkLink">View CC's work ►</a>
         </div>
-        <div class="CCtext">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                Ut interdum arcu at tellus efficitur pellentesque. 
-                Nulla accumsan metus odio, ut porta arcu lacinia vitae. 
-            </p>
-        </div>
+
       </div>
     </div>
+    
     <div class="student-work">
       <div class="container"></div>
     </div>
