responsiveness of skills section

--- a/index.html
+++ b/index.html
@@ -122,6 +122,12 @@
               </div>
             </div>
           </div>
+
+          <div class="curr-link">
+            <a href="/curriculum.html">view full curriculum ►</a>
+          </div>
+          <div class="teal-offset-button"></div>
+
         </div>
       </div>
     </div>
