cleaned up instructors, added offset rectangles, made fully responsive

--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
       </div>
       <div class="container-fluid ccPhotoTextHolder">
         <div class="container ccimage CCspecific">
+          <div class="ccBlackRectangle">
+            <h4>CC</h4>
+          </div>
+          <div class="ccTealRectangle">
+          </div>
         </div>
         <div class="container CCtext">
           <h5>Catherine "CC" Cura is the first woman Director of The Pioneer, an online publication run out of HackCville on The Corner.
