Added a TA to the instructors page, made fully repsponsive, missing the TA's image but using a filler image temporarilly.

--- a/index.html
+++ b/index.html
@@ -128,8 +128,43 @@
           </h5>
           <a href="#" class="CCworkLink">View CC's work ►</a>
         </div>
-
       </div>
+
+      <div class="container-fluid ccPhotoTextHolder phoneSecondImage">
+        <div class="container ccimage ceciliaSpecific">
+          <div class="ccBlackRectangle">
+            <h4>CC</h4>
+          </div>
+          <div class="ccTealRectangle">
+          </div>
+        </div>
+        <div class="container CCtext">
+          <h5>Cecilia Covert is the blahblahblahblahblahblahblahblahbl
+            ahblahblahblahblahb lorum ipsum daoisdioaisdioasoidoasdioas
+            dioasidaoisod.
+          </h5>
+          <a href="#" class="CCworkLink">View CC's work ►</a>
+        </div>
+      </div>
+
+      <div class="container-fluid ccPhotoTextHolder hideWhenMobile">
+        <div class="container CCtext">
+          <h5>Cecilia Covert is the blahblahblahblahblahblahblahblahbl
+            ahblahblahblahblahb lorum ipsum daoisdioaisdioasoidoasdioas
+            dioasidaoisod.
+          </h5>
+          <a href="#" class="CCworkLink">View Cecilia's work ►</a>
+        </div>
+        <div class="container ccimage ceciliaSpecific">
+          <div class="ccBlackRectangle">
+            <h4>Cecilia</h4>
+          </div>
+          <div class="ccTealRectangle">
+          </div>
+        </div>
+      </div>
+
+      
     </div>
     
     <div class="student-work">
