fixed strange horizontal scrolling thing, touched up responsiveness

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
     </div>
 
     <div class="instructors">
-      <div class="instructors_about">
-        <h2>YOUR INSTRUCTOR</h2>
+      <div class="instructorsMainTitle">
+        <h2 class="teacherTitle">YOUR INSTRUCTORS</h2>
       </div>
       <div class="container-fluid ccPhotoTextHolder">
         <div class="container ccimage CCspecific">
@@ -133,7 +133,7 @@
       <div class="container-fluid ccPhotoTextHolder phoneSecondImage">
         <div class="container ccimage ceciliaSpecific">
           <div class="ccBlackRectangle">
-            <h4>CC</h4>
+            <h4>Cecilia</h4>
           </div>
           <div class="ccTealRectangle">
           </div>
@@ -148,9 +148,12 @@
       </div>
 
       <div class="container-fluid ccPhotoTextHolder hideWhenMobile">
-        <div class="container CCtext">
-          <h5>Cecilia Covert is the blahblahblahblahblahblahblahblahbl
-            ahblahblahblahblahb lorum ipsum daoisdioaisdioasoidoasdioas
+        <div class="container Ceciliatext">
+          <h5>Cecilia Covert is the blahblahblahblahbl
+            ahblahblahblahbl
+            ahblahblahblahblahb loru
+            m ipsum daoisdioaisdioasoid
+            oasdioas
             dioasidaoisod.
           </h5>
           <a href="#" class="CCworkLink">View Cecilia's work ►</a>
