responsive skills DONE

--- a/index.html
+++ b/index.html
@@ -63,10 +63,76 @@
 
     <div class="skills">
       <div class="container-fluid">
-      <div class="skills-container">
-        <h2 id="skills-title">WHAT YOU'LL LEARN</h2>
+      
+        <div class="skills-title">
+          <h3>WHAT YOU'LL LEARN</h3>
+          <h2>THE SKILLS</h2>
+        </div>
         
+       <div class="skills-container"> 
+        <div class="mobile">
+          <div class="row">
+            <div class="col-xs-6">
+              <div class="hover-container">
+                <div class="skills-icon video"></div>
+                <div class="overlay">
+                  <div class="text">videography</div>
+                </div>
+              </div>
+            </div>
 
+            <div class="col-xs-6">
+              <div class="hover-container">
+                <div class="skills-icon photo"></div>
+                <div class="overlay">
+                  <div class="text">photography</div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-xs-6">
+              <div class="hover-container">
+                <div class="skills-icon edit"></div>
+                <div class="overlay">
+                  <div class="text">editing<br>software</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-xs-6">
+              <div class="hover-container">
+                <div class="skills-icon audio"></div>
+                <div class="overlay">
+                  <div class="text">audio</div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-xs-6">
+              <div class="hover-container">
+                <div class="skills-icon writing"></div>
+                <div class="overlay">
+                  <div class="text">creative<br>writing</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6">
+              <div class="hover-container">
+                <div class="skills-icon interview"></div>
+                <div class="overlay">
+                  <div class="text">how to<br>interview</div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="desktop">
           <div class="row">
             <div class="col-md-4">
               <div class="hover-container">
@@ -122,6 +188,7 @@
               </div>
             </div>
           </div>
+        </div>
 
           <div class="curr-link">
             <a href="/curriculum.html">view full curriculum ►</a>
