added responsive video carousel and title

--- a/index.html
+++ b/index.html
@@ -302,9 +302,61 @@
         </div>
 
         <div class="student-work">
-          <div class="container">
+          <div class="container-fluid">
+            <div class="row-fluid">
+              <h3>AND IN THE END THIS IS</h3>
+              <h2>WHAT YOU'L BE ABLE TO DO</h2>
+              <div class="carousel slide" id="myCarousel">
 
+                <div class="carousel-inner">
+
+                  <div class="item active">
+                    <div class="container">
+                      <div class="flex-video widescreen">
+                      <iframe src="https://player.vimeo.com/video/195110734" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="item">
+                    <div class="container">
+                      <div class="flex-video widescreen">
+                        <iframe src="https://player.vimeo.com/video/195110734" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="item">
+                    <div class="container">
+                      <div class="flex-video widescreen">
+                        <iframe src="https://player.vimeo.com/video/195110734" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="item">
+                    <div class="container">
+                      <div class="flex-video widescreen">
+                        <iframe src="https://player.vimeo.com/video/195110734" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                      </div>
+                    </div>
+                  </div>
+
+                </div> <!-- carousel-inner -->
+
+                <a data-slide="prev" href="#myCarousel" class="left carousel-control">
+                  <span class="glyphicon glyphicon-chevron-left"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a data-slide="next" href="#myCarousel" class="right carousel-control">
+                  <span class="glyphicon glyphicon-chevron-right"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+
+              </div>
+            </div>
           </div>
+
         </div>
         <div class="after-storyboard">
           <div class="container"></div>
