changed the videos and edited the title

--- a/index.html
+++ b/index.html
@@ -304,8 +304,8 @@
         <div class="student-work">
           <div class="container-fluid">
             <div class="row-fluid">
-              <h3>AND IN THE END THIS IS</h3>
-              <h2>WHAT YOU'L BE ABLE TO DO</h2>
+              <h3>CHECK OUT THESE</h3>
+              <h2>STUDENT VIDEOS</h2>
               <div class="carousel slide" id="myCarousel">
 
                 <div class="carousel-inner">
@@ -321,7 +321,7 @@
                   <div class="item">
                     <div class="container">
                       <div class="flex-video widescreen">
-                        <iframe src="https://player.vimeo.com/video/195110734" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                        <iframe width="640" height="360" src="https://www.youtube.com/embed/1cB1tceWMlE" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                       </div>
                     </div>
                   </div>
@@ -329,15 +329,7 @@
                   <div class="item">
                     <div class="container">
                       <div class="flex-video widescreen">
-                        <iframe src="https://player.vimeo.com/video/195110734" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="item">
-                    <div class="container">
-                      <div class="flex-video widescreen">
-                        <iframe src="https://player.vimeo.com/video/195110734" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                        <<iframe width="640" height="360" src="https://www.youtube.com/embed/auNYwU0Ibc4" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                       </div>
                     </div>
                   </div>
