added text, photo, and overlay offset - not responsive yet though

--- a/index.html
+++ b/index.html
@@ -311,7 +311,27 @@
           </div>
         </div>
         <div class="after-storyboard">
-          <div class="container"></div>
+            <h2>WHERE STORYBOARD CAN TAKE YOU</h2>
+            <div class="container-fluid">
+                <div class="container afterStoryBoardHolder">
+                    <div class="afterTitle">
+                        <h4>The skills you learn here can take you far</h4>
+                        <p>Past alumni of HackCville's Storyboard program have gone on to do incredible things. Some students choose to join our student-run publication The Pioneer, while others use their skills to build their entrepreneurial toolbox.</p>
+                        <br>
+                        <p class="compellingSentence">Where will Storyboard take you?</p>
+                    </div>
+                    <div class="afterPhoto">
+                        <div class="afterBlackBox">
+                            <h5>"Storyboard taught me a lot of valuable video production skills that UVA wouldn't have been able to teach me.</h5>
+                            <h6>- Dorothy Wang, HackCville Member, Storyboard Program Graduate</h6>
+                        </div>
+                        <div class="afterTealBox">
+                        </div>
+                    </div>
+                </div>
+                
+            
+            </div>
         </div>
         <div class="landed">
           <div class="container"></div>
