added auto scroll functionality from button Curriculum in navbar

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="collapse navbar-collapse" id="mainNavBar">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#" onclick= "scrollToTop()">About</a></li>
-            <li><a href="#">Curriculum</a></li>
+            <li><a href="#" onclick= "scrollToTopTwo()">Curriculum</a></li>
             <li><a href="#">Outcomes</a></li>
             <li><a href="#"><button type="button" class="btn btn-primary applyButton cmn-t-pulse">Apply</button></a></li>
           </ul> 
@@ -107,7 +107,7 @@
             </div>
           </div>
 
-          <div class="skills">
+          <div id="skillsSection" class="skills">
             <div class="container-fluid">
 
               <div class="skills-title">
@@ -244,7 +244,7 @@
             </div>
           </div>
 
-          <div class="instructors">
+          <div id="teachers" class="instructors">
             <div class="instructorsMainTitle">
               <h2 class="teacherTitle">YOUR INSTRUCTORS</h2>
             </div>
