added logos, made everything responsive

--- a/index.html
+++ b/index.html
@@ -395,7 +395,28 @@
             </div>
         </div>
         <div class="landed">
-          <div class="container"></div>
+            <div class="container-fluid">
+                <div class="landedTitle">
+                    <h2>PLACES WE'VE LANDED</h2>
+                </div>
+            <div class="row logoHolder hideLogosWhenMobile">
+                <div class="col-md-2"><img class="pioneerLogo" src="images/pioneerLogo.jpg"></div>
+                <div class="col-md-2">.<img class="cnnLogo" src="images/cnn.jpg"></div>
+                <div class="col-md-2"><img class="parselyLogo" src="images/parselyLogo.png"></div>
+                <div class="col-md-2"><img class="tomtomLogo" src="images/tomtomLogo.jpg"></div>
+                <div class="col-md-2"><img class="bostonredsoxLogo" src="images/redsoxLogo.jpg"></div>
+                <div class="col-md-2"><img class="uncubed" src="images/uncubed.png"></div>
+            </div>
+                
+            <div class="row logoHolder showLogosWhenMobile">
+                <div class="col-xs-6"><img class="pioneerLogo logo" src="images/pioneerLogo.jpg"></div>
+                <div class="col-xs-6">.<img class="cnnLogo logo" src="images/cnn.jpg"></div>
+                <div class="col-xs-6"><img class="parselyLogo logo" src="images/parselyLogo.png"></div>
+                <div class="col-xs-6"><img class="tomtomLogo logo" src="images/tomtomLogo.jpg"></div>
+                <div class="col-xs-6"><img class="bostonredsoxLogo logo" src="images/redsoxLogo.jpg"></div>
+                <div class="col-xs-6"><img class="uncubed logo" src="images/uncubed.png"></div>
+            </div>
+            </div>
         </div>
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
