added footer, made responsive but still needs tweaks

--- a/index.html
+++ b/index.html
@@ -418,6 +418,27 @@
             </div>
             </div>
         </div>
+        <div class="footer">
+            <div class="container-fluid">
+                <div class="container footerText">
+                    <h3>Get more info on our programs and free weekly events</h3>
+                    <p>Join 2500+ others and sign up to recieve updates on our events, programs, and how you can get involved. We'll be sending out the link to our application link on January 18, too.</p>
+                </div>
+                <div class="container emailForm">
+                    <form>
+                      <div class="form-group">
+                        <label for="exampleInputEmail1">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                      </div>
+                      <div class="form-group">
+                        <label for="exampleInputPassword1">Name</label>
+                        <input type="name" class="form-control" id="exampleInputPassword1" placeholder="Type your name...">
+                      </div>
+                      <button type="submit" class="btn btn-default ">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
