linked apply page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li><a href="#" onclick= "scrollToTop()">About</a></li>
             <li><a href="#">Curriculum</a></li>
             <li><a href="#">Outcomes</a></li>
-            <li><a href="#"><button type="button" class="btn btn-primary applyButton cmn-t-pulse">Apply</button></a></li>
+            <li><a href="apply.html"><button type="button" class="btn btn-primary applyButton cmn-t-pulse">Apply</button></a></li>
           </ul> 
         </div>
     </nav>
